--- a/src/main/resources/i18n/exception.properties
+++ b/src/main/resources/i18n/exception.properties
@@ -12,3 +12,9 @@ todayRemainedException.code= -1004
 todayRemainedException.msg= today 가 이미 존재해요.
 todayNotFoundException.code = -1005
 todayNotFoundException.msg = today 를 찾을수 없어요.
+emailNotFoundException.code = -1006
+emailNotFoundException.msg = 이메일을 찾을수 없어요.
+emailTimeOut.code = -1007
+emailTimeOut.msg = 이메일인증이 시간초과 되었습니다.
+emailverificationFail.code = -1008
+emailverificationFail.msg = 이메일인증이 실패하였습니다.
