--- a/src/main/resources/i18n/exception_en.properties
+++ b/src/main/resources/i18n/exception_en.properties
@@ -12,3 +12,9 @@ todayRemainedException.code= -1004
 todayRemainedException.msg= today domain is remained.
 todayNotFoundException.code = -1005
 todayNotFoundException.msg = don't found Today domain.
+emailNotFoundException.code = -1006
+emailNotFoundException.msg = don't found email domain.
+emailTimeOut.code = -1007
+emailTimeOut.msg = email vertification is failed.
+emailverificationFail.code = -1008
+emailverificationFail.msg = email verification is Fail
